--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   }
 </style>
 </head>
-  <body class="bg-gray-100 dark:bg-gray-900">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
